kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-back-svc
spec:
  selector:
    app.kubernetes.io/name: dashboard-back
  ports:
    - name: 8081-tcp
      port: 8081
      targetPort: 8000
  type: ClusterIP
